--- a/index.html
+++ b/index.html
@@ -3,6 +3,8 @@
   <head>
     <meta charset="utf-8">
     <title>eeek</title>
+    <link href="styles.css" type="text/css" rel="stylesheet">
+    <link href="other.css" type="text/css" rel="stylesheet">
   </head>
   <body>
     <h1>What Have I done??!</h1>
