--- a/newHTML.html
+++ b/newHTML.html
@@ -5,6 +5,18 @@
     <title>Blaaargh</title>
   </head>
   <body>
-    <h1>This is a new page!</h1>
+    <h1>Different git Workflows</h1>
+    <h2>Centralized</h2>
+    <h2>Contributor Forking</h2>
+    <h2>Feature Branching</h2>
+    <h2>Branch & Pull Requests</h2>
+
+    <h1>Some Command Notes</h1>
+    <p>
+      <ul>
+        <li>git checkout -b  'creates a new branch'</li>
+        <li></li>
+      </ul>
+
   </body>
 </html>
